# myhomelab

./: .dockerignore  .editorconfig  CHANGELOG.md  Cargo.toml  base.dockerfile  config.toml  justfile  release-plz.toml
.docker/: alpine.dockerfile  debian.dockerfile  devenv.dockerfile  vendor.dockerfile
.github/workflows/: binary-build.yml  code-checking.yml  commit-lint.yml  debian-package.yml  docker.yml  pull-request-lint.yml  release-build.yml  release-plz.yml  security-audit.yml
adapter-file/: Cargo.toml
adapter-file/src/: lib.rs
adapter-http/client/: Cargo.toml
adapter-http/client/src/: lib.rs  metric.rs
adapter-http/server/: Cargo.toml
adapter-http/server/src/: lib.rs
adapter-http/server/src/router/: mod.rs
adapter-http/server/src/router/api/: status.rs
adapter-http/server/src/router/api/dashboard/: list.rs  mod.rs
adapter-http/server/src/router/api/metric/: create.rs  mod.rs  query.rs
adapter-http/server/src/router/html/: dashboard.rs  home.rs  mod.rs
adapter-http/server/tests/: metrics.rs
adapter-http/shared/: Cargo.toml
adapter-http/shared/src/metric/: create.rs  mod.rs  query.rs
adapter-sqlite/: Cargo.toml
adapter-sqlite/migrations/: 20250620060000_create-counter-metrics-table_up.sql  20250620060001_create-gauge-metrics-table_up.sql
adapter-sqlite/src/: intake.rs  lib.rs
adapter-sqlite/src/query/: mod.rs  scalar.rs  shared.rs  timeseries.rs
adapter/dataset/: CHANGELOG.md  Cargo.toml
adapter/dataset/src/: dashboard.rs  lib.rs
adapter/file/: Cargo.toml
adapter/file/src/: dashboard.rs  lib.rs
adapter/http/client/: CHANGELOG.md  Cargo.toml
adapter/http/client/src/: dashboard.rs  metric.rs
adapter/http/server/: CHANGELOG.md  Cargo.toml
adapter/http/server/src/: lib.rs  trace.rs
adapter/http/server/src/router/: mod.rs
adapter/http/server/src/router/api/: mod.rs  status.rs
adapter/http/server/src/router/api/dashboard/: get_by_id.rs  list.rs  mod.rs
adapter/http/server/src/router/api/metric/: intake.rs  mod.rs  query.rs
adapter/http/server/src/router/api/sensor/: list.rs  (+2 more)
adapter/http/server/tests/: metrics.rs
adapter/http/shared/: CHANGELOG.md  Cargo.toml
adapter/http/shared/src/: lib.rs
adapter/http/shared/src/dashboard/: mod.rs
adapter/http/shared/src/metric/: create.rs  query.rs
adapter/http/shared/src/sensor/: execute.rs  mod.rs
adapter/opentelemetry/: Cargo.toml
adapter/opentelemetry/src/: lib.rs
adapter/sqlite/: CHANGELOG.md  Cargo.toml
adapter/sqlite/migrations/: 20250719180000_create-metrics_up.sql  20250720180000_create-metrics-index_up.sql  20250726150000_create-events_up.sql
adapter/sqlite/src/: intake.rs  lib.rs
adapter/sqlite/src/event/: intake.rs  mod.rs
adapter/sqlite/src/metric/: intake.rs  mod.rs
adapter/sqlite/src/metric/query/: mod.rs  scalar.rs  shared.rs  timeseries.rs
adapter/sqlite/src/query/: mod.rs  scalar.rs  shared.rs  timeseries.rs
agent/core/: Cargo.toml
agent/core/src/: lib.rs
agent/manager/: Cargo.toml
agent/manager/src/: config.rs  lib.rs  sensor.rs
agent/prelude/: Cargo.toml
agent/prelude/src/: collector.rs  lib.rs  mpsc.rs  reader.rs  sensor.rs
agent/reader-system/: Cargo.toml
agent/reader-system/src/: lib.rs
agent/reader-xiaomi/lywsd03mmc-atc/: Cargo.toml
agent/reader-xiaomi/lywsd03mmc-atc/src/: lib.rs
agent/reader-xiaomi/miflora/: Cargo.toml  readme.md
agent/reader-xiaomi/miflora/src/: device.rs  lib.rs  main.rs
agent/system/: Cargo.toml
agent/system/src/: lib.rs
agent/xiaomi/lywsd03mmc-atc/: Cargo.toml
agent/xiaomi/lywsd03mmc-atc/src/: event.rs  lib.rs
agent/xiaomi/miflora/: Cargo.toml
agent/xiaomi/miflora/src/: event.rs  lib.rs  main.rs
client/tui/: Cargo.toml
client/tui/src/: lib.rs  listener.rs  main.rs  prelude.rs  worker.rs
client/tui/src/hook/: dashboard.rs  mod.rs  query.rs
client/tui/src/view/: dashboard.rs  mod.rs  starting.rs
client/tui/src/view/dashboard/: cell.rs  line.rs  mod.rs
client/web/: CHANGELOG.md  Cargo.toml
client/web/src/: home.rs  lib.rs  mock.rs  page.rs  prelude.rs
client/web/src/component/: header.rs  line_chart.rs  mod.rs  scalar_table.rs  timerange_select.rs
client/web/src/page/: dashboard.rs  home.rs  mod.rs  style.css
core/: Cargo.toml
core/src/: lib.rs
core/src/intake/: mod.rs
core/src/metric/: mod.rs  tag.rs  value.rs
core/src/query/: mod.rs
dashboard/src/entity/: mod.rs
dashboard/src/repository/: mod.rs
domain/dashboard/: CHANGELOG.md  Cargo.toml
domain/dashboard/src/entity/: mod.rs
domain/event/: CHANGELOG.md  Cargo.toml
domain/event/src/: lib.rs  mock.rs
domain/metric/: CHANGELOG.md  Cargo.toml
domain/metric/src/: lib.rs  mock.rs
domain/metric/src/entity/: tag.rs
event/src/: intake.rs  lib.rs  mock.rs
http-server/: Cargo.toml
http-server/src/: lib.rs  main.rs
inbound-http/: Cargo.toml
inbound-http/src/: lib.rs
inbound-http/src/router/: mod.rs
inbound-http/src/router/api/: mod.rs  status.rs
inbound-http/src/router/api/metric/: create.rs
metric/: Cargo.toml
metric-mock/: Cargo.toml
metric-mock/src/: lib.rs
metric/src/: intake.rs  lib.rs  mock.rs  prelude.rs  query.rs
metric/src/entity/: mod.rs  tag.rs  value.rs
metric/src/intake/: mod.rs
metric/src/query/: mod.rs
prelude/: CHANGELOG.md  Cargo.toml
prelude/src/: lib.rs  time.rs
sensor/manager/: CHANGELOG.md  Cargo.toml
sensor/manager/src/: config.rs  lib.rs  sensor.rs
sensor/prelude/: CHANGELOG.md  Cargo.toml
sensor/prelude/src/: collector.rs  lib.rs  manager.rs  sensor.rs
sensor/system/: CHANGELOG.md  Cargo.toml
sensor/system/src/: lib.rs
sensor/xiaomi/lywsd03mmc-atc/: CHANGELOG.md  Cargo.toml
sensor/xiaomi/lywsd03mmc-atc/src/: event.rs  lib.rs  runner.rs
sensor/xiaomi/miflora/: CHANGELOG.md  Cargo.toml  debian.Dockerfile
sensor/xiaomi/miflora/src/: device.rs  event.rs  lib.rs  main.rs
server/: CHANGELOG.md  Cargo.toml  Dockerfile  alpine.Dockerfile  debian.Dockerfile
server/src/: collector.rs  main.rs
src/: lib.rs  main.rs  otel.rs
src/bluetooth/: mod.rs  xiaomi_lywsd03mmc_atc.rs  xiaomi_miflora.rs
systemd/: myhomelab.service
