[workspace]
resolver = "3"
members = [
    "adapter/dataset",
    "adapter/http/client",
    "adapter/http/server",
    "adapter/http/shared",
    "adapter/sqlite",
    "agent/manager",
    "agent/prelude",
    "agent/system",
    "agent/xiaomi/lywsd03mmc-atc",
    "agent/xiaomi/miflora",
    "client/tui",
    "client/web",
    "dashboard",
    "event",
    "metric",
    "prelude",
    "server",
]

[workspace.package]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0" }
btleplug = { version = "0.11" }
derive_more = { version = "2.0", default-features = false }
mockall = { version = "0.13" }
myhomelab-adapter-dataset = { path = "./adapter/dataset" }
myhomelab-adapter-http-client = { path = "./adapter/http/client" }
myhomelab-adapter-http-server = { path = "./adapter/http/server" }
myhomelab-adapter-http-shared = { path = "./adapter/http/shared" }
myhomelab-adapter-sqlite = { path = "./adapter/sqlite" }
myhomelab-agent-manager = { path = "./agent/manager" }
myhomelab-agent-prelude = { path = "./agent/prelude" }
myhomelab-agent-sensor-system = { path = "./agent/system" }
myhomelab-agent-sensor-xiaomi-lywsd03mmc-atc = { path = "./agent/xiaomi/lywsd03mmc-atc" }
myhomelab-agent-sensor-xiaomi-miflora = { path = "./agent/xiaomi/miflora" }
myhomelab-client-web = { path = "./client/web" }
myhomelab-dashboard = { path = "./dashboard" }
myhomelab-metric = { path = "./metric" }
myhomelab-prelude = { path = "./prelude" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_qs = { version = "1.0.0-rc.3" }
similar-asserts = { version = "1.7" }
tokio = { version = "1.45" }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
uuid = { version = "1.17" }
