[workspace]
resolver = "3"
members = [
  "adapter/dataset",
  "adapter/http/client",
  "adapter/http/server",
  "adapter/http/shared",
  "adapter/opentelemetry",
  "adapter/sqlite",
  "client/web",
  "domain/dashboard",
  "domain/event",
  "domain/metric",
  "prelude",
  "sensor/manager",
  "sensor/prelude",
  "sensor/xiaomi/lywsd03mmc-atc",
  "sensor/xiaomi/miflora",
  "server",
]

[workspace.package]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0" }
derive_more = { version = "2.0", default-features = false }
mockall = { version = "0.13" }
myhomelab-adapter-dataset = { path = "./adapter/dataset" }
myhomelab-adapter-http-client = { path = "./adapter/http/client" }
myhomelab-adapter-http-server = { path = "./adapter/http/server" }
myhomelab-adapter-http-shared = { path = "./adapter/http/shared" }
myhomelab-adapter-opentelementry = { path = "./adapter/opentelemetry" }
myhomelab-adapter-sqlite = { path = "./adapter/sqlite" }
myhomelab-client-web = { path = "./client/web" }
myhomelab-dashboard = { path = "./domain/dashboard" }
myhomelab-event = { path = "./domain/event" }
myhomelab-metric = { path = "./domain/metric" }
myhomelab-prelude = { path = "./prelude" }
myhomelab-sensor-manager = { path = "./sensor/manager" }
myhomelab-sensor-prelude = { path = "./sensor/prelude" }
myhomelab-sensor-xiaomi-lywsd03mmc-atc = { path = "./sensor/xiaomi/lywsd03mmc-atc" }
myhomelab-sensor-xiaomi-miflora = { path = "./sensor/xiaomi/miflora" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_qs = { version = "1.0.0-rc.3" }
similar-asserts = { version = "1.7" }
tokio = { version = "1.47" }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
uuid = { version = "1.17" }
