[package]
name = "myhomelab"
description = "Rust application to monitor things around home"
license-file = "LICENSE"
version = "0.1.1"
edition = "2024"

[features]
bluetooth = ["dep:bluer"]

[dependencies]
anyhow = { version = "1" }
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
opentelemetry = { version = "0.30" }
opentelemetry-appender-tracing = { version = "0.31", features = [
    "experimental_metadata_attributes",
    "experimental_use_tracing_span_context",
] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
] }
uuid = { version = "1.18" }

[package.metadata.deb]
maintainer = "Jeremie Drouet <jeremie.drouet@gmail.com>"
copyright = "2017, Jeremie Drouet <jeremie.drouet@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"

maintainer-scripts = "systemd/"

[package.metadata.deb.systemd-units]
enable = true
start = true
restart-after-upgrade = true
