[package]
name = "myhomelab-prelude"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
derive_more = { version = "2.0", features = ["from"] }
serde = { workspace = true, features = ["derive"] }
