[package]
name = "myhomelab-server"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
myhomelab-adapter-file = { workspace = true }
myhomelab-adapter-sqlite = { workspace = true }
myhomelab-adapter-http-server = { workspace = true }
myhomelab-agent-core = { workspace = true }
myhomelab-agent-reader-system = { workspace = true }
myhomelab-agent-reader-xiaomi-lywsd03mmc-atc = { workspace = true }
myhomelab-prelude = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-metric = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tracing-subscriber = { version = "0.3" }
