[package]
name = "myhomelab-server"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
myhomelab-adapter-dataset = { workspace = true }
myhomelab-adapter-sqlite = { workspace = true }
myhomelab-adapter-http-server = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-event = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-adapter-opentelementry = { workspace = true }
myhomelab-sensor-manager = { workspace = true }
myhomelab-sensor-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
