[package]
name = "myhomelab-adapter-http-server"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "json",
    "http1",
    "query",
    "matched-path",
] }
myhomelab-adapter-http-shared = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true, features = ["axum", "tracing"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }

[dev-dependencies]
myhomelab-adapter-file = { workspace = true }
myhomelab-adapter-http-client = { workspace = true }
myhomelab-dashboard = { workspace = true, features = ["mocks"] }
myhomelab-metric = { workspace = true, features = ["mocks"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
