[package]
name = "myhomelab-adapter-dataset"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
myhomelab-dashboard = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
uuid = { workspace = true }
