[package]
name = "myhomelab-adapter-opentelementry"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
opentelemetry = { version = "0.30.0" }
opentelemetry-appender-tracing = { version = "0.30.0", features = [
    "experimental_metadata_attributes",
    "experimental_use_tracing_span_context",
] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
serde = { workspace = true, features = ["derive"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "registry",
] }
