[package]
name = "myhomelab-adapter-sqlite"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { version = "0.14" }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "json",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tracing = { workspace = true }

[dev-dependencies]
myhomelab-metric = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }
