[package]
name = "myhomelab-agent-core"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
myhomelab-agent-prelude = { workspace = true }
myhomelab-agent-reader-system = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
