[package]
name = "myhomelab-agent-prelude"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
