[package]
name = "myhomelab-client-tui"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
myhomelab-prelude = { workspace = true }
myhomelab-adapter-http-client = { workspace = true }
myhomelab-adapter-http-shared = { workspace = true }
myhomelab-dashboard = { workspace = true }
ratatui = { version = "0.29" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
myhomelab-metric = { workspace = true }
similar-asserts = { workspace = true }
