[package]
name = "myhomelab-client-web"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]
mocks = []

[dependencies]
anyhow = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-metric = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
myhomelab-dashboard = { workspace = true, features = ["mocks"] }
myhomelab-metric = { workspace = true, features = ["mocks"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
