[package]
name = "myhomelab-client-web"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]
mocks = []

[dependencies]
anyhow = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
plotters = { version = "0.3", default-features = false, features = [
  "line_series",
  "svg_backend",
] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
myhomelab-dashboard = { workspace = true, features = ["mocks"] }
myhomelab-metric = { workspace = true, features = ["mocks"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
