[package]
name = "myhomelab-dashboard"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]
mocks = ["dep:mockall"]

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
mockall = { workspace = true, optional = true }
myhomelab-prelude = { workspace = true }
myhomelab-metric = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
