[package]
name = "myhomelab-event"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]
default = ["macros"]
macros = []
mocks = ["dep:mockall", "dep:serde_json"]

[dependencies]
anyhow = { workspace = true }
mockall = { workspace = true, optional = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
