[package]
name = "myhomelab-metric"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[features]
default = ["macros"]
macros = []
mocks = ["dep:mockall"]

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
mockall = { workspace = true, optional = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
