[package]
name = "myhomelab-sensor-manager"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
myhomelab-sensor-prelude = { workspace = true }
myhomelab-sensor-system = { workspace = true }
myhomelab-sensor-xiaomi-lywsd03mmc-atc = { workspace = true }
myhomelab-sensor-xiaomi-miflora = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
