[package]
name = "myhomelab-sensor-prelude"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
myhomelab-event = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
