[package]
name = "myhomelab-sensor-system"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
myhomelab-sensor-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sysinfo = { version = "0.36" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
