[package]
name = "myhomelab-adapter-http-shared"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
myhomelab-agent-manager = { workspace = true }
myhomelab-dashboard = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
