[package]
name = "myhomelab-sensor-xiaomi-lywsd03mmc-atc"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
btleplug = { workspace = true }
lru = { version = "0.16" }
myhomelab-event = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
myhomelab-sensor-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
