[package]
name = "myhomelab-sensor-xiaomi-miflora"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
btleplug = { workspace = true }
myhomelab-event = { workspace = true }
myhomelab-metric = { workspace = true }
myhomelab-prelude = { workspace = true }
myhomelab-sensor-prelude = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3" }
